--- a/climate-emotions.html
+++ b/climate-emotions.html
@@ -15,7 +15,7 @@
   </header>
 
 <h1 id="i-m-feeling-anxious">Coping with Climate Emotions</h1>
-<p>That’s understandable. We’re talking about big stuff here. It’s important to take care of yourself when you’re processing the complex feelings that come up in response to the climate crisis. </p>
+<p>If you're feeling distressed, that’s understandable. We’re talking about big stuff here. It’s important to take care of yourself when you’re processing the complex feelings that come up in response to the climate crisis. </p>
 <p>Feeling distressed is a completely normal reaction, but it’s not something you can sustain for long. Burnt out people can’t save a burning planet, so it’s important to take care of yourself.</p>
 <p>Here are some things that might help you. But <a href="#if-you-are-in-a-crisis-the-following-resources-can-provide-you-with-immediate-help">if you are in a crisis, click here instead.</a></p>
 <h2 id="move-your-body">Move Your Body</h2>
